--- a/www/css/catalog.css
+++ b/www/css/catalog.css
@@ -11,6 +11,8 @@ body{
 	overflow:hidden;
 	width:100%;
 	height:100%;
+	background-image: url(../img/metal-back.jpg);
+    background-position: center;
 }
 
 .flipbook-viewport .container{
