--- a/www/css/main.css
+++ b/www/css/main.css
@@ -7,7 +7,7 @@
 }
 #table1 thead, #table2_1 thead, #table2_2 thead {
    font-weight: bold;
-   font-size: 11px;
+   font-size: 10px;
 }
 td, th {
    border-bottom: thin solid #C0C0C0;
@@ -27,7 +27,9 @@ tbody .weight, tbody .weight_1, tbody .weight_2 {
    border-right: thin solid #C0C0C0;
    text-align: center;
 }
-
+table .range-field {
+   font-family: Verdana, Geneva, sans-serif;
+}
 /* table 1, 2_1 */
 #table1 .empty-field, #table2_1 .empty-field {
    width: 32px;
@@ -39,7 +41,7 @@ tbody .weight, tbody .weight_1, tbody .weight_2 {
 }
 /* table 2_2 */
 #table2_2, #table2_1 {
-   margin-top: 10px;
+   margin-top: 5px;
 }
 #table2_2 .empty-field {
    width: 22px;
@@ -108,20 +110,22 @@ table .range-content-14 {
    text-shadow: 0px 0px;
 }
 
-/* table 1 images container */
-#table1-images-container, #table2-images-container {
+/* table images container */
+#table1-images-container {
    float: left;
    width: 100%;
-   margin-top: 20px;
    margin-left: 10px;
 }
 #table2-images-container {
+   float: left;
+   width: 100%;
    margin-left: 0;
 }
 #table1-images-container img, #table2-images-container img {
-   height: 85%;
-   width: 85%;
-   margin-left: 9px;
+   height: 100%;
+   width: 100%;
+   border-radius: 9px;
+   top: 0;
 }
 .table1-img {
    float: left;
@@ -148,13 +152,58 @@ div[class^='img1_'], div[class^='img2_'] {
 }
 .img-title {
    width: 100%;
-   font-size: 13px;
-   font-weight: bold;
+   font-size: 15px;
    text-align: center;
+   position: absolute;
+   background-color: black;
+   opacity: 0.6;
+   text-shadow: 0px 0px;
+   color: white;
+   padding-top: 3px;
+   padding-bottom: 3px;
+   border-top-left-radius: 8px;
+   border-top-right-radius: 8px;
+   font-family: Verdana, Geneva, sans-serif;
 }
+
 .glow-effect {
    border-color: black;
    box-shadow: 0 0 20px black;
+}
+
+/* catalog broser page */
+#lister-page, #catalog-page {
+   height: 100%;
+}
+
+#lister-page .ui-content, #tables-page .ui-content {
+   height: 690px;
+   overflow-y: hidden;
+}
+
+/* ikone za izbiro jezika */
+.lang-icon {
+   float: right;
+   width: 32px;
+   height: 32px;
+   margin-top: 5px;
+   margin-right: 20px;
+   background-repeat: no-repeat;
+   background-size: 32px 32px !important;
+   cursor: pointer;
+}
+
+/* video ikona */
+.video-iconn {
+   position: absolute;
+   height: 50px;
+   width: 50px;
+   right: 130px;
+   top: 20px;
+   background-image: url(../img/video-icon.png);
+   background-size: 50px 50px;
+   cursor: pointer;
+   display: none;
 }
 
 /* animacija test
@@ -166,9 +215,3 @@ div[class^='img1_'], div[class^='img2_'] {
    -o-transition: 500ms linear 0s;
    transition: 500ms linear 0s;
 }*/
-
-/* catalog lister */
-/* TODO: odstrani; */
-#lister-page {
-   background-color: green;
-}
